Fix waveform overflow in SME

--- a/app/javascript/components/ReactButtonContainer.scss
+++ b/app/javascript/components/ReactButtonContainer.scss
@@ -17,16 +17,27 @@
 .react-button-container {
   display: inline-block;
 }
-.sme-modal-wrapper.show {
-  opacity: 1;
+
+.modal-open .modal {
+  height: 100vh;
+  overflow-y: scroll;
 }
-.sme-modal-wrapper .modal-wrapper-body {
-  width: 90%;
-  top: 50px;
+
+.sme-modal-wrapper {
+  .show {
+    opacity: 1;
+  }
+
+  .modal-wrapper-body {
+    width: 90%;
+    top: 50px;
+  }
+
+  .modal-title {
+    display: inline-block;
+  }
 }
-.sme-modal-wrapper .modal-title {
-  display: inline-block;
-}
+
 .modal-backdrop {
   opacity: 0.1;
 }
